--- a/XYZReader/src/main/res/layout-sw600dp-land/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout-sw600dp-land/fragment_article_detail.xml
@@ -35,62 +35,69 @@
                 android:id="@+id/image_scrim"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/scrim"/>
+                android:background="@drawable/scrim" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </FrameLayout>
 
     <android.support.v4.widget.NestedScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="#0000"
-        android:elevation="4dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="#fff"
-            android:layout_marginLeft="180dp"
-            android:layout_marginRight="180dp"
-            android:layout_marginTop="96dp">
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/article_title"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/Base.TextAppearance.AppCompat.Title"
-                android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
-                android:layout_marginRight="@dimen/detail_inner_horiz_margin"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"/>
+                android:layout_marginLeft="180dp"
+                android:layout_marginRight="180dp"
+                android:layout_marginTop="96dp"
+                android:layout_marginBottom="64dp"
+                android:background="#fff"
+                android:elevation="4dp"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/article_byline"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/Base.TextAppearance.AppCompat.Caption"
-                android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
-                android:layout_marginRight="@dimen/detail_inner_horiz_margin"
-                android:layout_marginBottom="16dp"/>
+                <TextView
+                    android:id="@+id/article_title"
+                    style="@style/Base.TextAppearance.AppCompat.Title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
+                    android:layout_marginRight="@dimen/detail_inner_horiz_margin"
+                    android:layout_marginTop="32dp" />
 
-            <TextView
-                android:id="@+id/article_body"
-                style="?android:attr/textAppearanceMedium"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
-                android:layout_marginRight="@dimen/detail_inner_horiz_margin"
-                android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
-                android:paddingBottom="@dimen/detail_body_bottom_margin"
-                android:textColor="@android:color/black"
-                android:textColorLink="@color/theme_accent"
-                android:textSize="@dimen/detail_body_text_size" />
+                <TextView
+                    android:id="@+id/article_byline"
+                    style="@style/Base.TextAppearance.AppCompat.Caption"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
+                    android:layout_marginRight="@dimen/detail_inner_horiz_margin" />
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/article_body"
+                    style="?android:attr/textAppearanceMedium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
+                    android:layout_marginRight="@dimen/detail_inner_horiz_margin"
+                    android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
+                    android:paddingBottom="32dp"
+                    android:textColor="@android:color/black"
+                    android:textColorLink="@color/theme_accent"
+                    android:textSize="@dimen/detail_body_text_size" />
+
+            </LinearLayout>
+
+        </FrameLayout>
 
     </android.support.v4.widget.NestedScrollView>
 
@@ -100,7 +107,7 @@
         android:layout_height="?attr/actionBarSize"
         android:elevation="5dp"
         app:layout_collapseMode="pin"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/share_fab"
